.config/k8s/postgres.yaml

apiVersion: v1
kind: Service
metadata:
  name: blog-postgres
  namespace: blog
spec:
  selector:
    app: blog-postgres
  ports:
    - port: 5432 # expose by service
      targetPort: 5432 # Pod's port
  type: ClusterIP # accessible only within the cluster
